@@ -127,7 +127,8 @@ api_files = [
     'colorbar_only.py',
     'color_cycle.py',
     'donut_demo.py',
-    'path_patch_demo.py'
+    'path_patch_demo.py',
+    'quad_bezier.py'
 ]
 
 units_dir = os.path.join('..', 'units')
